cf_analysis_results/checkerframework_results/url5997ccb760_JANNLab_JANNLab_tgz-pJ8-de_jannlab_examples_recurrent_SequentialXorExampleJ8.txt
../../../../datasets/june2020_dataset/url5997ccb760_JANNLab_JANNLab_tgz-pJ8-de_jannlab_examples_recurrent_SequentialXorExampleJ8/src/de/jannlab/io/Serializer.java:50: error: (required.method.not.called) $$ 4 $$ method close $$ out $$ java.io.ObjectOutputStream $$ possible exceptional exit due to out.writeObject(obj) with exception type java.io.IOException $$ ( 1788, 1908 ) $$ @MustCall method close may not have been invoked on out or any of its aliases.
        ObjectOutputStream out = new ObjectOutputStream(
                           ^
  The type of object is: java.io.ObjectOutputStream.
  Reason for going out of scope: possible exceptional exit due to out.writeObject(obj) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url5997ccb760_JANNLab_JANNLab_tgz-pJ8-de_jannlab_examples_recurrent_SequentialXorExampleJ8/src/de/jannlab/io/Serializer.java:51: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-2 $$ java.io.FileOutputStream $$ possible exceptional exit due to new GZIPOutputStream(new FileOutputStream(file)) with exception type java.io.IOException $$ ( 1870, 1896 ) $$ @MustCall method close may not have been invoked on temp-var-2 or any of its aliases.
            new GZIPOutputStream(new FileOutputStream(file))
                                 ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to new GZIPOutputStream(new FileOutputStream(file)) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url5997ccb760_JANNLab_JANNLab_tgz-pJ8-de_jannlab_examples_recurrent_SequentialXorExampleJ8/src/de/jannlab/io/Serializer.java:70: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-9 $$ java.io.FileInputStream $$ possible exceptional exit due to new GZIPInputStream(new FileInputStream(file)) with exception type java.io.IOException $$ ( 2493, 2518 ) $$ @MustCall method close may not have been invoked on temp-var-9 or any of its aliases.
            new GZIPInputStream(new FileInputStream(file))
                                ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to new GZIPInputStream(new FileInputStream(file)) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url5997ccb760_JANNLab_JANNLab_tgz-pJ8-de_jannlab_examples_recurrent_SequentialXorExampleJ8/src/de/jannlab/data/SampleTools.java:243: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-941 $$ java.io.FileReader $$ possible exceptional exit due to reader.ready() with exception type java.io.IOException $$ ( 8675, 8695 ) $$ @MustCall method close may not have been invoked on temp-var-941 or any of its aliases.
        BufferedReader reader = new BufferedReader(new FileReader(file));
                                                   ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to reader.ready() with exception type java.io.IOException
../../../../datasets/june2020_dataset/url5997ccb760_JANNLab_JANNLab_tgz-pJ8-de_jannlab_examples_recurrent_SequentialXorExampleJ8/src/de/jannlab/data/SampleTools.java:323: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-961 $$ java.io.FileWriter $$ possible exceptional exit due to out.write("# " + size + " samples\n") with exception type java.io.IOException $$ ( 11336, 11356 ) $$ @MustCall method close may not have been invoked on temp-var-961 or any of its aliases.
        BufferedWriter out = new BufferedWriter(new FileWriter(file));
                                                ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: possible exceptional exit due to out.write("# " + size + " samples\n") with exception type java.io.IOException
../../../../datasets/june2020_dataset/url5997ccb760_JANNLab_JANNLab_tgz-pJ8-de_jannlab_examples_recurrent_SequentialXorExampleJ8/src/de/jannlab/misc/ObjectCopy.java:45: error: (required.method.not.called) $$ 4 $$ method close $$ out $$ java.io.ObjectOutputStream $$ possible exceptional exit due to out.writeObject(obj) with exception type java.io.IOException $$ ( 1644, 1706 ) $$ @MustCall method close may not have been invoked on out or any of its aliases.
            ObjectOutputStream out       = new ObjectOutputStream(buffer);
                               ^
  The type of object is: java.io.ObjectOutputStream.
  Reason for going out of scope: possible exceptional exit due to out.writeObject(obj) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url5997ccb760_JANNLab_JANNLab_tgz-pJ8-de_jannlab_examples_recurrent_SequentialXorExampleJ8/src/de/jannlab/misc/ObjectCopy.java:52: error: (required.method.not.called) $$ 4 $$ method close $$ in $$ java.io.ObjectInputStream $$ regular method exit $$ ( 1869, 1996 ) $$ @MustCall method close may not have been invoked on in or any of its aliases.
            ObjectInputStream in = new ObjectInputStream(
                              ^
  The type of object is: java.io.ObjectInputStream.
  Reason for going out of scope: regular method exit
7 errors
